--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Win30</string>
     <string name="start_game">Start Game</string>
+    <string name="field_busy">This field is busy</string>
+    <string name="play_again">Play again</string>
 </resources>
